--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
     "react-router": "^6.7.0",
