--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^6.7.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-visibility-sensor": "^5.1.1",
     "swiper": "^8.4.6",
     "web-vitals": "^2.1.4"
   },
