--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.0",
