--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
